<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="openhab_service_type" translatable="false">_openhab-server-ssl._tcp.local.</string>
    <string name="app_preferences_name">Settings</string>
    <string name="app_notifications">Notifications</string>
    <string name="empty_string" translatable="false"></string>
    <string name="mainmenu_openhab_sitemaps">Sitemaps</string>
    <string name="mainmenu_openhab_preferences">Settings</string>
    <string name="mainmenu_openhab_selectsitemap">Select default Sitemap</string>
    <string name="mainmenu_openhab_clearcache">Clear images cache</string>
    <string name="settings_connection_title">Connection</string>
    <string name="settings_display_title">Display</string>
    <string name="settings_misc_title">Miscellaneous</string>
    <string name="settings_openhab_url">Local server URL</string>
    <string name="settings_openhab_url_summary">The URL of the openHAB dashboard (based on hostname or IP). If configured, autodiscovery is disabled. Current setting: %s</string>
    <string name="settings_openhab_alturl">Remote server URL</string>
    <string name="settings_openhab_alturl_summary">The URL of the openHAB dashboard used when the local address is unavailable. Current setting: %s</string>
    <string name="settings_openhab_username">Username</string>
    <string name="settings_openhab_password">Password</string>
    <string name="settings_openhab_password_summary_weak">Weak password set</string>
    <string name="settings_openhab_password_summary_strong">Strong password set</string>
    <string name="settings_openhab_sslclientcert">SSL client certificate</string>
    <string name="settings_openhab_sslclientcert_howto_summary">Tap here to get some hints and explanations on how to set up SSL client certificate authentication</string>
    <string name="settings_openhab_sslclientcert_howto_url" translatable="false">https://community.openhab.org/t/using-nginx-reverse-proxy-for-client-certificate-authentication-start-discussion/43064</string>
    <string name="settings_openhab_screentimeroff">Disable display timer</string>
    <string name="settings_openhab_screentimeroff_summary">Disable display switch off timer when openHAB is running</string>
    <string name="settings_openhab_demomode">Demo mode</string>
    <string name="settings_openhab_demomode_summary">Run in demo mode</string>
    <string name="settings_openhab_theme">Theme</string>
    <string name="settings_openhab_fullscreen">Fullscreen</string>
    <string name="settings_openhab_fullscreen_summary">Display in fullscreen mode</string>
    <string name="settings_openhab_icon_format">Icon format</string>
    <string name="settings_openhab_icon_format_value_png" translatable="false">PNG</string>
    <string name="settings_openhab_icon_format_value_svg" translatable="false">SVG</string>
    <string name="settings_openhab_icon_format_png">Bitmap</string>
    <string name="settings_openhab_icon_format_svg">Vector</string>
    <string name="settings_chart_scaling">Chart scaling</string>
    <string name="settings_chart_scaling_summary">Note: Smaller scaling shrinks fonts and line widths, so there\'s more space for the graph, but font readability may suffer.</string>
    <string name="settings_chart_scaling_value_xs">Very small</string>
    <string name="settings_chart_scaling_value_s">Small</string>
    <string name="settings_chart_scaling_value_m">Default</string>
    <string name="settings_chart_scaling_value_l">Large</string>
    <string name="settings_ringtone">Notification ringtone</string>
    <string name="settings_ringtone_none">None</string>
    <string name="settings_clear_default_sitemap">Clear default Sitemap</string>
    <string name="settings_no_default_sitemap">No default Sitemap selected</string>
    <string name="settings_current_default_sitemap">Current default Sitemap: %1$s</string>
    <string name="settings_openhab_alt_connection">Remote</string>
    <string name="settings_openhab_connection">Local</string>
    <string name="settings_notification_vibration">Notification vibration</string>
    <string name="settings_notification_vibration_off">Off</string>
    <string name="settings_notification_vibration_short">Short</string>
    <string name="settings_notification_vibration_long">Long</string>
    <string name="settings_notification_vibration_twice">Twice</string>
    <string name="settings_notification_vibration_value_off" translatable="false">off</string>
    <string name="settings_notification_vibration_value_short" translatable="false">short</string>
    <string name="settings_notification_vibration_value_long" translatable="false">long</string>
    <string name="settings_notification_vibration_value_twice" translatable="false">twice</string>
    <string name="settings_connection_summary">Connected to %s</string>
    <string name="settings_insecure_connection_summary">Insecurely connected to %s</string>
    <string name="title_voice_widget">SCM voice commands</string>
    <string name="info_voice_input">SCM, at your command!</string>
    <string name="info_voice_recognized_text">Recognized command: %1$s</string>
    <string name="info_demo_mode_short">Running in demo mode</string>
    <string name="info_conn_url">Connecting to local URL</string>
    <string name="info_conn_rem_url">Connecting to remote URL</string>
    <string name="error_empty_sitemap_list">openHAB returned empty Sitemap list</string>
    <string name="error_network_not_available">Network is not available</string>
    <string name="error_http_connection_failed">Connection unsuccessful. An unexpected response was received while trying to connect to the configured openHAB server (Received HTTP response code: %d).</string>
    <string name="error_invalid_url">Please enter a valid URL in a \'http(s)://host(:port)/\' form</string>
    <string name="error_connection_failed">Connection to host failed</string>
    <string name="error_unable_to_resolve_hostname">Unable to resolve hostname</string>
    <string name="error_connection_sslhandshake_failed">SSL handshake failed</string>
    <string name="error_certificate_not_trusted">SSL certificate isn\'t trusted. Please import the root certificate or accept the certificate during SSL handshake.</string>
    <string name="error_certificate_expired">SSL certificate has been expired. Please get a new certificate or accept the certificate during SSL handshake.</string>
    <string name="error_certificate_not_valid_yet">SSL certificate isn\'t valid yet. Please get a correct certificate or accept the certificate during SSL handshake. Also check if the clock on your device is set correctly.</string>
    <string name="error_certificate_revoked">SSL certificate has been revoked. Please get a new certificate or accept the certificate during SSL handshake.</string>
    <string name="error_certificate_wrong_host">SSL certificate is not valid for %s</string>
    <string name="error_http_code_401">Authentication failed. Please check the configured username and password respectively the provided SSL client certificate (HTTP response code 401).</string>
    <string name="error_http_code_403">Authentication failed. Please check the configured username and password respectively the provided SSL client certificate (HTTP response code 403).</string>
    <string name="error_http_code_407">Authentication failed. Please check the configured username and password respectively the provided SSL client certificate (HTTP response code 407).</string>
    <string name="error_http_code_414">URL is too long. Please use the IP address or a shorter URL (HTTP response code 414).</string>
    <string name="error_http_code_426">HTTPS is required. Please change the URL (HTTP response code 426).</string>
    <string name="error_http_code_495">Authentication failed. Please check the provided SSL client certificate (HTTP response code 495).</string>
    <string name="error_http_code_496">SSL client certificate is required (HTTP response code 496)</string>
    <string name="error_http_code_502">Your reverse proxy got an invalid answer from the openHAB server (HTTP response code 502)</string>
    <string name="error_http_code_503">The openHAB server is temporarily unavailable (HTTP response code 503)</string>
    <string name="error_http_code_504">Gateway time-out. Seems that your reverse proxy is running, but couldn\'t get an answer from the openHAB server (HTTP response code 504).</string>
    <string name="error_http_code_507">The openHAB server hasn\'t enough free space (HTTP response code 507)</string>
    <string name="error_http_code_511">Network authentication is required (HTTP response code 511)</string>
    <string name="error_about_no_conn">Error while fetching openHAB server information</string>
    <string name="error_openhab_offline">Your openHAB server is offline while the cloud instance is running</string>
    <string name="error_no_app_store_found">No app store found to install voice recognizer app</string>
    <string name="title_activity_openhabwritetag">Write NFC tag</string>
    <string name="title_activity_libraries">Used libraries</string>
    <string name="info_write_tag">Touch the tag and keep it close until the confirmation message appear</string>
    <string name="info_write_tag_progress">Writing the tag</string>
    <string name="info_write_tag_finished">Successfully finished</string>
    <string name="info_write_failed">Tag write error</string>
    <string name="info_write_tag_unsupported">This device doesn\'t have NFC support</string>
    <string name="info_write_tag_disabled">NFC is disabled. Please enable it in device settings menu.</string>
    <string name="info_openhab_apiversion_label">openHAB Rest API version</string>
    <string name="info_openhab_uuid_label">openHAB UUID</string>
    <string name="info_openhab_secret_label">openHAB Secret</string>
    <string name="info_openhab_push_notification_label">Push notification status</string>
    <string name="action_settings">Settings</string>
    <string name="nfc_dialog_title">Write NFC tag action for this element</string>
    <string name="info_not_set">Not set</string>
    <string name="notification_list_empty">No notifications were sent so far</string>
    <string name="notification_list_error">An error occurred while loading notifications</string>
    <string name="list_loading_message">Loading\u2026</string>
    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority</string>
    <string name="mtm_cert_expired">The server certificate is expired</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>
    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>
    <string name="mtm_decision_always">Accept</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>
    <string name="mtm_notification">Certificate verification</string>
    <string name="settings_openhab_none">None</string>
    <string name="theme_value_light" translatable="false">light</string>
    <string name="theme_value_dark" translatable="false">dark</string>
    <string name="theme_value_black" translatable="false">black</string>
    <string name="theme_value_basic_ui" translatable="false">basicui</string>
    <string name="about_title">About</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
</resources>